services/aka-75/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aka-75
  labels:
    name: aka-75
    app: aka-75
