services/aka-75/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aka-75
  namespace: aka-75
  labels:
    app: aka-75
    version: v1.0.0
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: aka-75
  template:
    metadata:
      labels:
        app: aka-75
        version: v1.0.0
      annotations:
        argocd.argoproj.io/sync-wave: "0"
        timestamp: "1760331233"
        deployment.kubernetes.io/revision: "1"
    spec:
      containers:
      - name: aka-75
        image: ghcr.io/ductri09072004/aka-75:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: http
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        livenessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
