services/aka-75/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aka-75-service
  namespace: aka-75
  labels:
    app: aka-75
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: aka-75
